# CP-Buddy

./: .gitmodules  CMakeLists.txt  README.md
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
src/: cpb.cpp  cpb.hpp  main.cpp
